02-net/aws_eip__eipalloc-cicd-natgw.tf
# # File generated by aws2tf see https://github.com/aws-samples/aws2tf
# # aws_eip.eipalloc-052dd24eaa93ed064:
# resource "aws_eip" "eipalloc-052dd24eaa93ed064" {
#   public_ipv4_pool = "amazon"
#   tags             = {}
#   domain           = "vpc"

#   timeouts {}
# }
