02-net/aws_nat_gateway__eks-cicd.tf
# # File generated by aws2tf see https://github.com/aws-samples/aws2tf
# # aws_nat_gateway.nat-07b271e3a84d0d94a:
# resource "aws_nat_gateway" "nat-cicd" {
#   allocation_id = aws_eip.eipalloc-052dd24eaa93ed064.id
#   subnet_id     = aws_subnet.subnet-cicd-public1.id
#   tags = {
#     "Name" = "ngw-eks-cicd"
#   }
# }
