02-net/aws_route_table__rtb-isol.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table.rtb-0329e787bbafcb2c4:
resource "aws_route_table" "rtb-i" {
  propagating_vgws = []
  route = [
    {
      carrier_gateway_id         = ""
      cidr_block                 = "0.0.0.0/0"
      destination_prefix_list_id = ""
      egress_only_gateway_id     = ""
      gateway_id                 = ""
      instance_id                = null
      ipv6_cidr_block            = null
      local_gateway_id           = ""
      nat_gateway_id             = aws_nat_gateway.nat-eks.id
      network_interface_id       = ""
      transit_gateway_id         = ""
      vpc_peering_connection_id  = ""
      vpc_endpoint_id            = ""
      core_network_arn           = ""
    },
  ]
  tags = {
    "Name" = format("eks-%s-cluster/IsolatedRouteTable", data.aws_ssm_parameter.tf-eks-cluster-name.value)
  }
  vpc_id = aws_vpc.cluster.id
}
